--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
 /* General body styles */
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #f4f4f4;
+    background-color: #e0f7fa /*#f4f4f4*/;
     color: #333;
     line-height: 1.6;
     padding: 20px;
