--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,7 @@ nav a:hover {
 .profile {
    display: flex;
    justify-content: space-between;
-   align-items: center;
+   align-items: left;
    gap: 20px;
 }
 
