--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ nav a:hover {
     object-fit: cover;
   }
 .profile-text {
-   flex: 1;/*ocupa el espacio restante*/
+   width: 75%;/*ocupa el restante*/
    text-align: left; /*texto alineado a la iyzquierda*/
    margin-left: 0; /*quitamos el margen ya que se usa gap*/
 }
