--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ nav a:hover {
    align-items: center; /*centra verticalmente*/
    gap: 20px; /*Espacio entre imagen  z texto*/
 }
-  .profile.img {
+  .profile-img {
      width:25%; /*ocupamos el 25% del contenedor*/
      object-fit: cover;
   }
