--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ nav a:hover {
 ---------------------------------------- */
 .profile {
    display: flex;
-   justify-content: flex-start; /*alinea al inicio -> izquierda*/
+   justify-content: left; /*alinea al inicio -> izquierda*/
    align-items: center; /*centra verticalmente*/
    gap: 20px; /*Espacio entre imagen  z texto*/
 }
