--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ nav a:hover {
 ---------------------------------------- */
 .profile {
    display: flex;
-   justify-content: left; /*alinea al inicio -> izquierda*/
+   justify-content: center; /*alinea al inicio -> izquierda*/
    align-items: center; /*centra verticalmente*/
    gap: 20px; /*Espacio entre imagen  z texto*/
 }
@@ -99,7 +99,6 @@ nav a:hover {
 
 .profile-text {
    text-align: left; /*texto alineado a la iyzquierda*/
-   margin-left: 0; /*quitamos el margen ya que se usa gap*/
 }
 
 /* ----------------------------------------
