--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
 ---------------------------------------- */
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #f4f4f4; 
+    background-color: #D0E8F2; 
     color: #333;
     line-height: 1.6;
     padding: 20px;
@@ -88,17 +88,20 @@ nav a:hover {
    PROFILE / PROFILE ELEMENTS
 ---------------------------------------- */
 .profile {
-   display: flex;
-   justify-content: center; /*alinea al inicio -> izquierda*/
-   align-items: center; /*centra verticalmente*/
-   gap: 20px; /*Espacio entre imagen  z texto*/
+    display: flex;
+    justify-content: center; /* centra horizontalmente */
+    align-items: center; /* centra verticalmente */
+    gap: 20px; /* Espacio entre imagen y texto */
 }
-  .profile-img {
-     width:25%; /*ocupamos el 25% del contenedor*/
-  }
+
+.profile-img img {
+    max-width: 150px;
+    width: 100%;
+    height: auto;
+}
 
 .profile-text {
-   text-align: left; /*texto alineado a la iyzquierda*/
+    text-align: left; /* texto alineado a la izquierda */
 }
 
 /* ----------------------------------------
@@ -192,5 +195,13 @@ ul li a:hover {
 @media (max-width: 600px) {
     .grid-container {
         grid-template-columns: 1fr;
+    }
+
+    nav {
+        padding-left: 15px;
+    }
+
+    ul {
+        padding-left: 30px;
     }
 }
