--- a/styles.css
+++ b/styles.css
@@ -155,9 +155,9 @@ ul li a:hover {
 
 .card {
     display: block;
-    background-color: #ffffff;
+    background-color: #46b2f0;
     border-radius: 10px;
-    border: 1px solid #ddd;
+    border: 1px solid #ffffff;
     padding: 20px;
     text-align: center;
     color: inherit;
@@ -174,13 +174,13 @@ ul li a:hover {
 .card-title {
     font-size: 18px;
     font-weight: bold;
-    color: #222;
+    color: #000000;
     margin-bottom: 10px;
 }
 
 .card-description {
     font-size: 14px;
-    color: #555;
+    color: #000000;
 }
 
 /* ----------------------------------------
